# kopuz

./: .clippy.toml  .envrc  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  Dioxus.toml  Justfile  LICENSE  Makefile  README.md  append_channel_keys.py  build-flatpak.sh  bundle_appimage.sh  check_keys.py  com.temidaradev.kopuz.json  com.temidaradev.rusic.json  devenv.nix  flake.nix  install.sh  install_appimage.sh  package-lock.json  tailwind.config.js  tailwind.css  translate_channel_keys.py
components/: Cargo.toml
components/src/: album_details.rs  bottombar.rs  dots_menu.rs  download_overlay.rs  folder_detail.rs  fullscreen.rs  lib.rs  playlist_detail.rs  playlist_modal.rs  playlist_popups.rs  reorder_buttons.rs  rightbar.rs  search_bar.rs  search_genre_detail.rs  search_genres.rs  search_results.rs  selection_bar.rs  settings_items.rs  settings_popups.rs  showcase.rs  sidebar.rs  titlebar.rs  track_list_view.rs  track_row.rs
components/src/modern/: showcase.rs
crates/components/: Cargo.toml
crates/components/src/: album_details.rs  album_play_button.rs  bottombar.rs  compact_player.rs  constants.rs  dots_menu.rs  download_overlay.rs  folder_detail.rs  folder_picker.rs  fullscreen.rs  header.rs  lib.rs  lyrics_view.rs  metadata_modal.rs  navigation_controller.rs  playlist_detail.rs  playlist_modal.rs  playlist_popups.rs  queue_list_view.rs  reorder_buttons.rs  rightbar.rs  search_genre_detail.rs  search_genres.rs  search_results.rs  selection_bar.rs  settings_items.rs  settings_popups.rs  shared.rs  showcase.rs  sidebar.rs  source_switcher.rs  stat_card.rs  titlebar.rs  track_list_view.rs  track_row.rs  virtual_scroll.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs  source.rs  views.rs
crates/db/: .gitignore  Cargo.toml
crates/db/.sqlx/: query-032348e42d0f261da0a76651250ccd027ba5963bddb8d8ad6ef9e64b714e76d2.json  query-058d9350c3e21bacc9d73a7b86652d31aaed77ebf93f6c2fa5ab1e191020de30.json  query-0b13453b84b6b2c3562390b4181fc7573b07315a81193e802ca1ebac833a6e34.json  query-10a68c4026523fba7f018fb166f1b302706ab13e22e40e906d30e7762489852a.json  query-146f2903a70ec76fcd22fe826738a2fb13bf87a30ed27fb64baa82c44edbddac.json  query-14851053460a9e1af83d330c04a8fb9037f03e8609ee9264b0a1b9c726faa06e.json  query-16f9621ffdd139e00bdfaa97240bdac4d73c51dc3dbb279b2b2a359cc6e5520c.json  query-17d10865e8e3eabbb7804bc4635588047df93afefbdc37bf619c393e11c33187.json  query-18159d8de0a0baaa095e9b8b36036a7a58cfb3aeb5a0bf764c6aebc98da9c910.json  query-197d0477b44aee6b467958718384eec6e7f855e105f9f3479b8daf54a0c5374d.json  query-1a3f2d0e6c7ca7ed696ac01a71fccd94f9d5609601ef6b86b4b5740c35a308d1.json  query-1d28128f906a383aa06d52d3364fa7614fa36a1064e39c901ed3cd2a3edcd3cc.json  query-1f7afa8ef0e85cb8136a3bde9c6f42808261d499dcb561c818acf3a528bac8dd.json  query-25eeebbb3e728e5c4cff3079d3bbb3d2b00add7e9026739413c444899fc37d5c.json  query-292478d70db8014afdab37e4ad7c845249abd0ab4decd35618a0b94a479ba943.json  query-32092dfa2ed39d47f7b6eaba69f2277e24229a9dbf6c0887e1459eb5c028be5e.json  query-342d2dcda16edbfa489e6d2c5bc4f66fee1115e228a680b0ff5507a5148c3ffe.json  query-386d4066c70fc477afb10e556b238a0990c07a368246ab0ec5c3ddda34153f20.json  query-38f5fccef604106dc38500679db8a82f93e6918fe23b087d26c64c4666a52976.json  query-3e85de4603a2b0a4dca9da192648e9f021df4a78f61263fa9f75e8a43b007af5.json  query-409527f36352f4b3247de18488978d9b5223608c68d44bb1d331f1bb0a2972cb.json  query-4536e31c5569a45a116d2c5900e587456647abcb79603f7cc3ae827f619df331.json  query-4898aa81090af82bb60f411bdd4923213848ced585ba01eaec5f3b0c602e5fc7.json  query-4a005a676d8a0b9b9be039f29501f1b88f14b51a6c4fc2d6490dc9a82e5a8302.json  query-506404f16911e4cd87cea63174e2205bd1edb5b27799ecf04e474d09c4a4aeb5.json  query-525ee80471ae68001a7e7a2618e1907bc221b5ce79f17e9a32afac32fcc68cb5.json  query-54154227591305077298eaf0cbecafb57778073c73aa87e31ebf809da7f0e1d8.json  query-5904bf50640796be80b84920e905659993bfcfdd1a9aa0adca71d8f2056638a3.json  query-5c8b487307467833faf8776921dade6abfeebd1e091744cba37fa6a75ff91bbe.json  query-60c4709515c6111ff17fb436953a9ddda4aea7b8a894e95fdebb9cca22c6b8d1.json  query-6964b4a84b0e2615d45f4e27ec74d53c3ce568d64aeca2aec08c2180a4716dbb.json  query-6d4bde346fd9146d46aec7150fef2340e2832321630128855c0d74a5a954f417.json  query-6e8e01fa195a54ff477258c7272f3066405f8281090ba5e6a4192579788ce12c.json  query-73815df706a490b139a07cba7a693dfca68c65a248199e429c4555406fd1c4d7.json  query-74d9018e3b2be3932b7f9cd67e0be8c048af26577228609a076c5baa69efbd14.json  query-76fc9fb3caf971361c5d053d92d7a27143050ce15a054181a85a95c25e0838cc.json  query-77b606a9d0e7a1849723ff74d85e61d06ccdfe7ad2556438e0e0af2228a7bafe.json  query-78355a9ada5f01f94636e1a3087ed27a5ab690e096196ae1cf5e1bbe0b9d4425.json  query-7c41dbbb7e932f79f0a8f30f8b03c795837018ee558034450c213818996a2ab7.json  query-7cdcb72b79c57823022dbce1ac732b5195a9d738da8dcc34b176d2a3a7e87753.json  (+41 more)
crates/db/migrations/: 20260611000000_init.sql  20260616000000_favorites_rank.sql  20260616000001_favorites_epoch.sql  20260618000000_recently_played.sql  20260620000000_playlist_tracks_epoch.sql  (+1 more)
crates/db/src/: backend.rs  lib.rs
crates/discord-presence/: Cargo.toml
crates/hooks/: Cargo.toml
crates/i18n/: Cargo.toml  build.rs
crates/kopuz/: Cargo.toml  Info.plist  build.rs
crates/kopuz_route/: Cargo.toml
crates/pages/: Cargo.toml
crates/player/: Cargo.toml
crates/radio/: Cargo.toml  README.md
crates/reader/: Cargo.toml
crates/scrobble/: Cargo.toml
crates/server/: Cargo.toml  build.rs
crates/utils/: Cargo.toml
discord-presence/: Cargo.toml
discord-presence/src/: cover_art.rs  lib.rs
hooks/: Cargo.toml
hooks/src/: use_library_items.rs  use_player_controller.rs  use_player_task.rs  use_search_data.rs
pages/: Cargo.toml
pages/src/: album.rs  artist.rs  favorites.rs  home.rs  lib.rs  library.rs  logs.rs  playlists.rs  search.rs  settings.rs  ytdlp.rs
player/: Cargo.toml
player/src/: decoder.rs  lib.rs  player.rs
radio/: Cargo.toml
radio/src/: lib.rs  listen_moe.rs
reader/: Cargo.toml
reader/src/: lib.rs  metadata.rs  models.rs  scanner.rs  utils.rs
(+375 files in other folders)
