[workspace]
members = [
   "crates/kopuz",
   "crates/components",
   "crates/hooks",
   "crates/pages",
   "crates/player",
   "crates/reader",
   "crates/server",
   "crates/utils",
   "crates/config",
   "crates/kopuz_route",
   "crates/discord-presence",
   "crates/scrobble",
   "crates/i18n",
   "crates/radio",
]
resolver = "3"

[workspace.package]
version = "0.6.0"

[workspace.dependencies]
dioxus = { version = "0.7.5", features = [] }
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3", features = ["AudioContext", "AudioDestinationNode", "AudioNode", "AudioParam", "BiquadFilterNode", "BiquadFilterType", "ChannelMergerNode", "ChannelSplitterNode", "GainNode", "HtmlAudioElement", "HtmlMediaElement", "MediaElementAudioSourceNode", "MediaError", "Window", "Storage"] }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt", "time", "sync", "macros", "io-util"] }
async-recursion = "1.0"
discord-rich-presence = "1.1.0"
lofty = "0.22.4"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
rfd = "0.17.2"
percent-encoding = "2.3.2"
dotenvy = "0.15"
http = "1.4.0"
uuid = { version = "1.20.0", features = ["v4", "fast-rng", "macro-diagnostics", "js"] }
cpal = "0.17"
symphonia = { version = "0.5", features = ["all"] }
rb = "0.4"
jellyfin-sdk-rust = "0.1.2"
reqwest = "0.12"
rand = "0.8"
web-time = "1.1"
gloo-timers = { version = "0.3", features = ["futures"] }
directories = "6.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
i18n = { path = "./crates/i18n" }
player = { path = "./crates/player" }
reader = { path = "./crates/reader" }
components = { path = "./crates/components" }
hooks = { path = "./crates/hooks" }
pages = { path = "./crates/pages" }
utils = { path = "./crates/utils" }
config = { path = "./crates/config" }
kopuz = { path = "./crates/kopuz" }
server = { path = "./crates/server" }
kopuz_route = { path = "./crates/kopuz_route" }
discord-presence = { path = "./crates/discord-presence" }
scrobble = { path = "./crates/scrobble" }
radio = { path = "./crates/radio" }

[profile.release]
strip = "symbols"
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.dev.package."*"]
opt-level = 3

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
