[package]
name = "components"
version = "0.3.6"
edition = "2024"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus = { workspace = true, features = ["desktop"] }
directories = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { workspace = true, features = ["web"] }

[dependencies]
webbrowser = "1.2.1"
tracing = "0.1"
scrobble = { path = "../scrobble" }
uuid = { workspace = true }
player = { workspace = true }
reader = { workspace = true }
utils = { workspace = true }
kopuz_route = { workspace = true }
config = { workspace = true }
rfd = { workspace = true }
hooks = { workspace = true }
rand = { workspace = true }
server = { workspace = true }
tokio = { workspace = true, features = ["time"] }
serde_json = { workspace = true }
i18n = { workspace = true }
