[package]
name = "hooks"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { workspace = true }
reader = { workspace = true }
utils = { workspace = true }
player = { workspace = true }
tokio = { workspace = true }
rodio = { workspace = true }
config = { workspace = true }
rand = { workspace = true }
discord-presence = { workspace = true }
reqwest = { workspace = true }
