[package]
name = "pages"
version = "0.3.6"
edition = "2024"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus = { workspace = true, features = ["desktop"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { workspace = true, features = ["web"] }

[dependencies]
uuid = { workspace = true }
player = { workspace = true }
reader = { workspace = true }
components = { workspace = true }
hooks = { workspace = true }
config = { workspace = true }
rfd = { workspace = true }
utils = { workspace = true }
rusic_route = { workspace = true }
server = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }
