[package]
name = "reader"
version = "0.3.6"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
lofty = { workspace = true }
symphonia = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
