[package]
name = "components"
version.workspace = true
edition = "2024"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus = { workspace = true, features = ["desktop"] }
directories = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { workspace = true, features = ["web"] }

[dependencies]
webbrowser = "1.2.1"
tracing = "0.1"
scrobble = { workspace = true }
uuid = { workspace = true }
player = { workspace = true }
reader = { workspace = true }
utils = { workspace = true }
kopuz_route = { workspace = true }
config = { workspace = true }
hooks = { workspace = true }
rand = { workspace = true }
server = { workspace = true }
tokio = { workspace = true, features = ["time", "fs"] }
serde_json = { workspace = true }
i18n = { workspace = true }

# Native file dialogs (folder/cover pickers). Not used on web, and rfd doesn't work on
# Android (which auto-detects the music dir via JNI instead).
[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "android")))'.dependencies]
rfd = { workspace = true }
