[package]
name = "kopuz-components"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[lib]
name = "components"

[lints]
workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus = { workspace = true, features = ["desktop"] }
directories = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { workspace = true, features = ["web"] }

[dependencies]
webbrowser = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
scrobble = { workspace = true }
uuid = { workspace = true }
player = { workspace = true }
reader = { workspace = true }
utils = { workspace = true }
kopuz_route = { workspace = true }
config = { workspace = true }
hooks = { workspace = true }
rand = { workspace = true }
server = { workspace = true }
tokio = { workspace = true, features = ["time", "fs"] }
serde_json = { workspace = true }
i18n = { workspace = true }

# Native file dialogs (folder/cover pickers). Not used on web, and rfd doesn't work on
# Android (which auto-detects the music dir via JNI instead).
[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "android")))'.dependencies]
rfd = { workspace = true }
