[package]
name = "kopuz-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[lib]
name = "config"

[lints]
workspace = true

[dependencies]
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
directories = { workspace = true }
uuid = { workspace = true }
