[package]
name = "kopuz-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[lib]
name = "db"

[lints]
workspace = true

[dependencies]
config = { workspace = true }
reader = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sqlx = { workspace = true, features = [
  "runtime-tokio",
  "sqlite",
  "macros",
  "migrate",
] }
tokio = { workspace = true, features = ["rt", "sync"] }
arc-swap = { workspace = true }
directories = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite"] }
