[package]
name = "hooks"
version.workspace = true
edition = "2024"

[lints]
workspace = true

[dependencies]
tracing = { workspace = true }
dioxus = { workspace = true }
reader = { workspace = true }
db = { workspace = true }
utils = { workspace = true }
player = { workspace = true }
config = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
server = { workspace = true }
scrobble = { workspace = true }
web-time = { workspace = true }
radio = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
discord-presence = { workspace = true }
tokio = { workspace = true, features = ["fs", "sync", "macros"] }
