[package]
name = "kopuz-hooks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[lib]
name = "hooks"

[lints]
workspace = true

[dependencies]
tracing = { workspace = true }
dioxus = { workspace = true }
reader = { workspace = true }
db = { workspace = true }
utils = { workspace = true }
player = { workspace = true }
config = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
server = { workspace = true }
scrobble = { workspace = true }
web-time = { workspace = true }
radio = { workspace = true }
base64 = "0.22"

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
discord-presence = { workspace = true }
tokio = { workspace = true, features = ["fs", "sync", "macros"] }
