[package]
name = "kopuz"
version.workspace = true
edition = "2024"

[package.metadata.bundle]
identifier = "com.temidaradev.kopuz"
icon = ["assets/app.ico", "assets/logo.png"]
category = "public.app-category.music"

[package.metadata.bundle.macos]
info_plist_path = "Info.plist"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus = { workspace = true, features = ["desktop"] }
directories = { workspace = true }
discord-presence = { workspace = true }
discord-rich-presence = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
webbrowser = "1.2.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { workspace = true, features = ["web"] }
getrandom = { workspace = true }
web-sys = { workspace = true }

[dependencies]
uuid = { workspace = true }
tracing = { workspace = true }
player = { workspace = true }
components = { workspace = true }
reader = { workspace = true }
config = { workspace = true }
pages = { workspace = true }
kopuz_route = { workspace = true }
radio = { workspace = true }
tokio = { workspace = true }
http = { workspace = true }
hooks = { workspace = true }
percent-encoding = { workspace = true }
image = { workspace = true }
utils = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
i18n = { workspace = true }
urlencoding = "2.1.3"
reqwest = { workspace = true, features = ["json"] }


[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = { version = "2.0", features = ["v2_16"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6.3", features = ["std"] }
objc2-foundation = { version = "0.3.2", features = [
    "NSString",
    "NSDictionary",
    "NSValue",
    "NSObject",
    "NSURL",
    "NSProcessInfo",
] }
objc2-media-player = { version = "0.3.2", features = [
    "MPNowPlayingInfoCenter",
    "MPMediaItem",
    "MPRemoteCommandCenter",
    "MPRemoteCommand",
] }
objc2-app-kit = { version = "0.3.2", features = ["NSImage"] }
block2 = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"

[features]
default = []
