[package]
name = "kopuz"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[lints]
workspace = true

[package.metadata.bundle]
identifier = "com.temidaradev.kopuz"
icon = ["assets/app.ico", "assets/logo.png"]
category = "public.app-category.music"

[package.metadata.bundle.macos]
info_plist_path = "Info.plist"

# Shared by desktop + android (native, non-web).
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
directories = { workspace = true }
discord-presence = { workspace = true }

# Desktop only. Android uses the mobile renderer, logs to logcat, and has no Discord IPC.
[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "android")))'.dependencies]
dioxus = { workspace = true, features = ["desktop"] }
discord-rich-presence = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
ctrlc = { workspace = true }
webbrowser = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
dioxus = { workspace = true, features = ["mobile"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { workspace = true, features = ["web"] }
getrandom = { workspace = true }
web-sys = { workspace = true }

[dependencies]
uuid = { workspace = true }
tracing = { workspace = true }
player = { workspace = true }
components = { workspace = true }
reader = { workspace = true }
config = { workspace = true }
db = { workspace = true }
pages = { workspace = true }
server = { workspace = true }
kopuz_route = { workspace = true }
radio = { workspace = true }
tokio = { workspace = true }
http = { workspace = true }
hooks = { workspace = true }
percent-encoding = { workspace = true }
image = { workspace = true }
utils = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
i18n = { workspace = true }
urlencoding = { workspace = true }
reqwest = { workspace = true, features = ["json"] }


[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = { workspace = true, features = ["v2_16"] }
libloading = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { workspace = true, features = ["std"] }
objc2-foundation = { workspace = true, features = [
  "NSString",
  "NSDictionary",
  "NSValue",
  "NSObject",
  "NSURL",
  "NSProcessInfo",
] }
objc2-media-player = { workspace = true, features = [
  "MPNowPlayingInfoCenter",
  "MPMediaItem",
  "MPRemoteCommandCenter",
  "MPRemoteCommand",
] }
objc2-app-kit = { workspace = true, features = ["NSImage"] }
block2 = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true, features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_UI_HiDpi",
  "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = { workspace = true }

# image: generate Android launcher icons from assets/logo.png.
# base64: inline the vendored woff2 fonts into the bundled CSS as data: URIs.
[build-dependencies]
image = { workspace = true }
base64 = "0.22"

[features]
default = []
