[package]
name = "kopuz-route"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[lib]
name = "kopuz_route"

[lints]
workspace = true

[dependencies]
