[package]
name = "pages"
version.workspace = true
edition = "2024"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus = { workspace = true, features = ["desktop"] }
directories = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { workspace = true, features = ["web"] }

[dependencies]
uuid = { workspace = true }
player = { workspace = true }
reader = { workspace = true }
components = { workspace = true }
hooks = { workspace = true }
config = { workspace = true }
rfd = { workspace = true }
utils = { workspace = true }
kopuz_route = { workspace = true }
server = { workspace = true }
radio = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }
i18n = { workspace = true }
lofty.workspace = true
