[package]
name = "kopuz-pages"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[lib]
name = "pages"

[lints]
workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus = { workspace = true, features = ["desktop"] }
directories = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { workspace = true, features = ["web"] }

# rfd is only used by the yt-dlp page, which is desktop/web only (excluded on Android).
[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "android")))'.dependencies]
rfd = { workspace = true }

[dependencies]
uuid = { workspace = true }
player = { workspace = true }
reader = { workspace = true }
components = { workspace = true }
hooks = { workspace = true }
config = { workspace = true }
utils = { workspace = true }
kopuz_route = { workspace = true }
server = { workspace = true }
radio = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }
i18n = { workspace = true }
lofty.workspace = true
tracing = { workspace = true }
