[package]
name = "kopuz-player"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[lib]
name = "player"

[lints]
workspace = true

[dependencies]
tracing = { workspace = true }
config = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cpal = { workspace = true }
symphonia = { workspace = true }
symphonia-adapter-libopus = { workspace = true }
rb = { workspace = true }
tokio = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { workspace = true }
wasm-bindgen = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { workspace = true, features = ["std"] }
objc2-foundation = { workspace = true, features = [
  "NSString",
  "NSDictionary",
  "NSValue",
  "NSObject",
  "NSURL",
  "NSProcessInfo",
] }
objc2-media-player = { workspace = true, features = [
  "MPNowPlayingInfoCenter",
  "MPMediaItem",
  "MPRemoteCommandCenter",
  "MPRemoteCommand",
] }
objc2-app-kit = { workspace = true, features = ["NSImage"] }
objc2-av-foundation = { workspace = true, features = ["AVAudioSession"] }
objc2-avf-audio = { workspace = true, features = ["AVAudioSession"] }
block2 = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[target.'cfg(target_os = "linux")'.dependencies]
mpris-server = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true, features = [
  "Foundation",
  "Media",
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_System_WinRT",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Shell",
  "Storage_Streams",
  "Win32_System_Com",
] }
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true, features = ["blocking"] }

[target.'cfg(target_os = "android")'.dependencies]
jni = { workspace = true }
ndk-context = { workspace = true }
tokio = { workspace = true, features = ["full"] }
base64 = { workspace = true }
