[package]
name = "kopuz-reader"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[lib]
name = "reader"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
config = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
lofty = { workspace = true }
symphonia = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
reqwest = { workspace = true, features = ["json"] }
