[package]
name = "kopuz-scrobble"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[lib]
name = "scrobble"

[lints]
workspace = true

[dependencies]
md5 = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
config.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
dioxus.workspace = true
