[package]
name = "server"
version.workspace = true
edition = "2024"

[lints]
workspace = true

[dependencies]
tracing = { workspace = true }
directories = { workspace = true }
jellyfin-sdk-rust = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
config = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
md5 = "0.8"
sha1 = { version = "0.10", features = ["oid"] }
sha2 = "0.10"
httpdate = "1"
hex = "0.4"
rookie = "0.5"
web-time = { workspace = true }
tokio = { workspace = true, features = ["fs", "process", "rt", "sync"] }
reader = { workspace = true }
db = { workspace = true }
utils = { workspace = true }
async-trait = "0.1"
urlencoding = "2.1"
regex = "1"
rsa = "0.9"
pkcs8 = "0.10"
pkcs1 = "0.7"
aes = "0.8"
cbc = "0.1"
cmac = "0.7"
ctr = "0.9"
base64 = "0.22"
m3u8-rs = "6"
prost = "0.13"
symphonia = { workspace = true }

[build-dependencies]
prost-build = "0.13"

[[example]]
name = "duration_probe"
path = "examples/duration_probe.rs"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
