[package]
name = "kopuz-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[lib]
name = "server"

[lints]
workspace = true

[dependencies]
tracing = { workspace = true }
directories = { workspace = true }
jellyfin-sdk-rust = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
config = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
md5 = { workspace = true }
sha1 = { workspace = true }
httpdate = { workspace = true }
hex = { workspace = true }
web-time = { workspace = true }
tokio = { workspace = true, features = ["fs", "process", "rt", "sync"] }
reader = { workspace = true }
db = { workspace = true }
utils = { workspace = true }
async-trait = { workspace = true }

# Browser-cookie import. Not on Windows: rookie pulls `libesedb` (a bundled C
# library) there, which can't cross-compile.
[target.'cfg(not(target_os = "windows"))'.dependencies]
rookie = "0.5"

# Windows native cookie decryption (v10 DPAPI + planted v20 app-bound). Reuses
# the project's sqlx/sqlite (NOT rusqlite — that would double-link libsqlite3).
[target.'cfg(windows)'.dependencies]
base64 = { workspace = true }
aes-gcm = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite"] }
windows-core = "0.62"
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Rpc",
    "Win32_Security_Cryptography",
    "Win32_System_Memory",
] }

[[example]]
name = "duration_probe"
path = "examples/duration_probe.rs"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
