[package]
name = "utils"
version.workspace = true
edition = "2024"

[dependencies]
percent-encoding = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
color-thief = "0.2.2"
image = "0.25.10"
urlencoding = "2.1.3"
md5 = "0.8"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
lofty = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
base64 = "0.22"
